[build-system]
requires = ["setuptools>=61.0", "numpy", "scipy", "scikit-learn"]
build-backend = "setuptools.build_meta"
[project]
name = "DStab"
version = "0.0.1"
authors = [
  { name="Ariel Baya", email="ariel.baya@gmail.com" },
]
description = "DStab package. Read https://doi.org/10.1007/s10044-023-01175-7"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ar-baya/DStab"
"Bug Tracker" = "https://github.com/ar-baya/DStab/issues"

